# swww

./: TODO
daemon/: Cargo.toml  build.rs
daemon/src/: main.rs  renderer.rs  wallpaper.rs
daemon/src/animations/: mod.rs  transitions.rs
daemon/src/imgproc/: animations.rs  mod.rs
daemon/src/processor/: animations.rs  mod.rs
doc/: swww-img.1.scd
src/: cli.rs  imgproc.rs  main.rs
utils/src/: cache.rs  communication.rs  ipc.rs  lib.rs
