[package]
name = "swww-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
simplelog = "0.12"

wayland-client = { version = "0.30", default-features = false, features = [ "log" ]}
wayland-backend = { version = "0.1", features = ["client_system"] }
smithay-client-toolkit = { version = "0.17", default-features = false }

raw-window-handle = "0.5.2"
glutin = { version = "0.30", default-features = false, features = [ "egl", "wayland" ]}

nix = { version = "0.26", default-features = false, features = [ "signal", "poll" ] }
keyframe = "1.1"

utils = { path = "../utils" }
sd-notify = { version = "0.4.1" }

[build-dependencies]
gl_generator = "0.14"

[dev-dependencies]
rand = "0.8"
